@@ -24,6 +24,7 @@
 	- fix: reload macros from cmd line when re-reading config files.
 	- fix: compressFileList was over-generating dirNames.
 	- fix: alAddPackage sorted dirNames too soon, destroying dirMapping.
+	- expose enough of legacy fdio interface to compile gnorpm.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
